# saloon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml
analysis/: admin.py  analytics.py  graph.py  harmonic.py  mashup.py  models.py  tests.py  urls.py  views.py
analysis/management/commands/: backfill_promoted_tags.py  compute_lyric_embeddings.py  compute_sentiment.py  compute_track_tags.py
analysis/migrations/: 0001_initial.py  0002_mashuppair.py  0003_add_track_tags.py  0004_tracktags_vocab_hash_tagsuggestion.py
analysis/templates/analysis/partials/: graph.html  (+1 more)
cli/: reporter.py
docs/: audio-analysis.md
saloon/: asgi.py  settings.py  urls.py  wsgi.py
spotify/: admin.py  apps.py  auth.py  client.py  deezer.py  genius.py  importers.py  lrclib.py  models.py  pipeline.py  tests.py  urls.py  views.py
spotify/audio_features/: base.py  kaggle.py  pipeline.py  reccobeats.py
spotify/management/commands/: fetch_audio_features.py  fetch_lyrics.py  import_saved_tracks.py  sync_playlist_tracks.py  sync_playlists.py  sync_saved_tracks.py
spotify/migrations/: 0001_initial.py  0002_spotifytoken.py  0003_add_audio_features.py  0004_token_type.py  0005_spotifytoken_profile.py  0006_add_playlist_models.py  0007_playlist_created_at.py  0008_add_track_lyrics.py  0009_playlist_staleness_and_playlisttrack_position_index.py  0010_playlist_ignored.py
spotify/templates/spotify/: base.html  library.html  mashup.html  oauth_complete.html  playlist_detail.html
spotify/templatetags/: spotify_extras.py
(+18 files in other folders)
