[project]
name = "saloon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "kagglehub[pandas-datasets]>=1.0.0",
    "librosa>=0.11.0",
    "lyricsgenius>=3.12.0",
    "numba<0.63",
    "numpy>=2.3.5,<2.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sqlite-vec>=0.1.9",
    "token-counter-cli>=0.1.6",
    "vadersentiment>=3.3.2",
]
